@@ -352,6 +352,7 @@ FIND_PACKAGE(PkgConfig)
 
 MACRO(CHECK_BACKEND BACKEND_OPTION BACKEND_NAME BACKEND_LIB BACKEND_HEADER BACKEND_TEST_FUNC)
 IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND MATCHES "1${${BACKEND_OPTION}_DLOPEN}")
+  SET(BACKEND_HAVE 0)
   IF(CMAKE_PKGCONFIG_EXECUTABLE AND NOT ${BACKEND_NAME} MATCHES "^$")
     PKGCONFIG(${BACKEND_NAME}
               BACKEND_HAVE
@@ -360,14 +361,23 @@ IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND MATCHES "1${${BACKEND_OPTIO
               BACKEND_LINK_DIRS
               BACKEND_LIBS)
 
-    SET(${BACKEND_OPTION}_HAVE          ${BACKEND_HAVE}          CACHE INTERNAL "")
-    SET(${BACKEND_OPTION}_INCLUDE_DIRS "${BACKEND_INCLUDE_DIRS}" CACHE INTERNAL "")
-    SET(${BACKEND_OPTION}_DEFINES      "${BACKEND_DEFINES}"      CACHE INTERNAL "")
-    SET(${BACKEND_OPTION}_LINK_DIRS    "${BACKEND_LINK_DIRS}"    CACHE INTERNAL "")
-    SET(${BACKEND_OPTION}_LIBS         "${BACKEND_LIBS}"         CACHE INTERNAL "")
-
-    #MESSAGE("have ${${BACKEND_OPTION}_HAVE} inc ${${BACKEND_OPTION}_INCLUDE_DIRS} def ${${BACKEND_OPTION}_DEFINES} linkdirs ${${BACKEND_OPTION}_LINK_DIRS} libs ${${BACKEND_OPTION}_LIBS}")
+    IF(BACKEND_HAVE)
+      SET(${BACKEND_OPTION}_INCLUDE_DIRS
+          "${BACKEND_INCLUDE_DIRS};${${BACKEND_OPTION}_INCLUDE_DIR}" CACHE INTERNAL "")
+      SET(${BACKEND_OPTION}_DEFINES      "${BACKEND_DEFINES}"        CACHE INTERNAL "")
+      SET(${BACKEND_OPTION}_LINK_DIRS    "${BACKEND_LINK_DIRS}"      CACHE INTERNAL "")
+      SET(${BACKEND_OPTION}_LIBS         "${BACKEND_LIBS}"           CACHE INTERNAL "")
+    ENDIF(BACKEND_HAVE)
   ENDIF(CMAKE_PKGCONFIG_EXECUTABLE AND NOT ${BACKEND_NAME} MATCHES "^$")
+
+  IF(NOT BACKEND_HAVE)
+    # don't want or have pkg-config, or  it failed
+    SET(${BACKEND_OPTION}_INCLUDE_DIRS "${${BACKEND_OPTION}_INCLUDE_DIR}" CACHE INTERNAL "")
+    SET(${BACKEND_OPTION}_LINK_DIRS    "${${BACKEND_OPTION}_LIB_DIR}"     CACHE INTERNAL "")
+    SET(${BACKEND_OPTION}_LIBS         "${BACKEND_LIB}"                   CACHE INTERNAL "")
+  ENDIF(NOT BACKEND_HAVE)
+
+  #MESSAGE("have ${${BACKEND_OPTION}_HAVE} inc ${${BACKEND_OPTION}_INCLUDE_DIRS} def ${${BACKEND_OPTION}_DEFINES} linkdirs ${${BACKEND_OPTION}_LINK_DIRS} libs ${${BACKEND_OPTION}_LIBS}")
 
   SET(SOURCE
 "#include <${BACKEND_HEADER}>
