@@ -2,7 +2,8 @@
 
 	* CMakeLists.txt: Variables ALUT_INCLUDE_DIR and ALUT_LIB_DIR introduced,
 	so tests can be built w/o globally installed alut more easily; remove
-	some debug message
+	some debug message; introduce *_INLCUDE_DIR and *_LIB_DIR for back-ends
+	and extenstion, and use fall-back if pkg-config fails
 
 2006-02-27  Sven Panne  <sven.panne@aedion.de>
 
